@@ -1,9 +1,12 @@
+#include <stdio.h>
 #include <stdlib.h>
 #include <gtk/gtk.h>
 #include "ol_lrc_fetch.h"
 #include "string.h"
 #include "ol_lrc_fetch_sogou.h"
 #include "ol_lrc_fetch_qianqian.h"
+#include "ol_utils.h"
+#include "ol_debug.h"
 
 #define OL_LRC_FETCH_ENGINE_MAX 10
 
@@ -94,4 +97,148 @@ ol_lrc_fetch_get_engine_list (int *count)
   if (count != NULL)
     *count = engine_count;
   return (const char**) engine_list;
+}
+
+static char*
+internal_strncpy (char *dest, const char *src, size_t count)
+{
+  ol_assert_ret (dest != NULL, NULL);
+  if (src == NULL)
+    dest[0] = '\0';
+  else
+    strncpy (dest, src, count);
+  return dest;
+}
+
+void
+ol_lrc_candidate_set_title (OlLrcCandidate *candidate,
+                            const char *title)
+{
+  ol_assert (candidate != NULL);
+  internal_strncpy (candidate->title, title, OL_TS_LEN_MAX);
+}
+
+char*
+ol_lrc_candidate_get_title (OlLrcCandidate *candidate)
+{
+  ol_assert_ret (candidate != NULL, NULL);
+  return candidate->title;
+}
+
+void
+ol_lrc_candidate_set_artist (OlLrcCandidate *candidate,
+                                  const char *artist)
+{
+  ol_assert (candidate != NULL);
+  internal_strncpy (candidate->artist, artist, OL_TS_LEN_MAX);
+}
+
+char*
+ol_lrc_candidate_get_artist (OlLrcCandidate *candidate)
+{
+  ol_assert_ret (candidate != NULL, NULL);
+  return candidate->artist;
+}
+
+void
+ol_lrc_candidate_set_url (OlLrcCandidate *candidate,
+                          const char *url)
+{
+  ol_assert (candidate != NULL);
+  internal_strncpy (candidate->url, url, OL_URL_LEN_MAX);
+}
+
+char*
+ol_lrc_candidate_get_url (OlLrcCandidate *candidate)
+{
+  ol_assert_ret (candidate != NULL, NULL);
+  return candidate->url;
+}
+
+void
+ol_lrc_candidate_set_rank (OlLrcCandidate *candidate,
+                           int rank)
+{
+  ol_assert (candidate != NULL);
+  candidate->rank = rank;
+}
+
+int
+ol_lrc_candidate_get_rank (OlLrcCandidate *candidate)
+{
+  ol_assert_ret (candidate != NULL, 0);
+  return candidate->rank;
+}
+
+int 
+ol_lrc_candidate_serialize (OlLrcCandidate *candidate,
+                            char *buffer,
+                            size_t count)
+{
+  ol_assert_ret (candidate != NULL, 0);
+  int cnt = 0;
+  if (buffer)
+  {
+    cnt += snprintf (buffer + cnt, count - cnt, "%s\n", candidate->title);
+    cnt += snprintf (buffer + cnt, count - cnt, "%s\n", candidate->artist);
+    cnt += snprintf (buffer + cnt, count - cnt, "%s\n", candidate->url);
+    cnt += snprintf (buffer + cnt, count - cnt, "%d\n", candidate->rank);
+    if (cnt >= count)
+    {
+      if (count > 0)
+        buffer[count - 1] = '\0';
+    }
+    else
+    {
+      buffer[cnt] = '\0';
+    }
+  }
+  else
+  {
+    cnt += strlen (candidate->title);
+    cnt++;
+    cnt += strlen (candidate->artist);
+    cnt++;
+    cnt += strlen (candidate->url);
+    cnt++;
+    static char buffer[20];
+    cnt += snprintf (buffer, 20, "%d\n", candidate->rank);
+  }
+  return cnt;
+}
+
+int 
+ol_lrc_candidate_deserialize (OlLrcCandidate *candidate,
+                              const char *data)
+{
+  ol_assert_ret (candidate != NULL, 0);
+  ol_assert_ret (data != NULL, 0);
+  int ret = 1;
+  size_t len = strlen (data);
+  char *buffer = malloc (len + 1);
+  strncpy (buffer, data, len + 1);
+  char *title, *artist, *url, *rank;
+  title = artist = url = rank = NULL;
+  title = buffer;
+  artist = ol_split_a_line (title);
+  if (artist != NULL)
+    url = ol_split_a_line (artist);
+  if (url != NULL)
+    rank = ol_split_a_line (url);
+  if (artist == NULL || url == NULL || rank == NULL ||
+      ol_split_a_line (rank) == NULL)
+  {
+    ret = 0;
+  }
+  else
+  {
+    ol_lrc_candidate_set_title (candidate, title);
+    ol_lrc_candidate_set_artist (candidate, artist);
+    ol_lrc_candidate_set_url (candidate, url);
+    int rank_int = 0;
+    sscanf (rank, "%d", &rank_int);
+    ol_lrc_candidate_set_rank (candidate, rank_int);
+  }
+  free (buffer);
+  return ret;
 }
