@@ -20,6 +20,47 @@ OlLrcCandidate *ol_lrc_candidate_new ();
 void ol_lrc_candidate_copy (OlLrcCandidate *dest, OlLrcCandidate *src);
 void ol_lrc_candidate_free (OlLrcCandidate *ptr);
 
+void ol_lrc_candidate_set_title (OlLrcCandidate *candidate,
+                                 const char *title);
+char* ol_lrc_candidate_get_title (OlLrcCandidate *candidate);
+
+void ol_lrc_candidate_set_artist (OlLrcCandidate *candidate,
+                                  const char *artist);
+char* ol_lrc_candidate_get_artist (OlLrcCandidate *candidate);
+
+void ol_lrc_candidate_set_url (OlLrcCandidate *candidate,
+                               const char *url);
+char* ol_lrc_candidate_get_url (OlLrcCandidate *candidate);
+
+void ol_lrc_candidate_set_rank (OlLrcCandidate *candidate,
+                                int rank);
+int ol_lrc_candidate_get_rank (OlLrcCandidate *candidate);
+
+/** 
+ * @brief Converts an LRC Candidate to a string
+ * The returned buffer is NUL-terminated
+ * @param candidate An OlLrcCandidate
+ * @param buffer Buffer of serialzed string, or NULL.
+ *               If not NULL, the serialzed string is terminated with NUL.
+ * @param count The size of the buffer. 
+ * 
+ * @return The length of the serialized string, regardless of the size of buffer.
+ */
+int ol_lrc_candidate_serialize (OlLrcCandidate *candidate,
+                                char *buffer,
+                                size_t count);
+
+/** 
+ * @brief Converts a string to an OlLrcCandidate
+ * 
+ * @param candidate An OlLrcCandidate
+ * @param data The serialized string from an OlLrcCandidate
+ * 
+ * @return 1 if succeeded, or 0 if failed
+ */
+int ol_lrc_candidate_deserialize (OlLrcCandidate *candidate,
+                                  const char *data);
+
 /** 
  * @brief fetch the candidate title-singer-url list;
  *        strongly depending on the web page structure.
